# bench-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: cli.yml  main.rs
