[package]
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
name = "bench"
version = "1.0.0"
license = "MIT"
readme = "README.md"
description = """
Run a program, measure execution time and print statistics.
"""
documentation = "https://github.com/AlexanderThaller/bench-rs"
homepage = "https://github.com/AlexanderThaller/bench-rs"
repository = "https://github.com/AlexanderThaller/bench-rs"

[dependencies]
criterion = "0.2"
failure = "0.1"
log = "0.4"
simplelog = "0.4"

[dependencies.clap]
features = ["yaml"]
version = "2.29.3"
